ecmascript/parser/tests/test262-error-references/fail/575367951ac8635d.js.stderr
error: Expected 4 hex characters
 --> $DIR/tests/test262-parser/fail/575367951ac8635d.js:1:3
  |
1 | ('\u')
  |   ^^

